# gozle_portal_backend

./: .gitignore  README.md  dist.env  manage.py  pyproject.toml  schema.yml
authentication/migrations/: 0001_initial.py
gozle_portal/: asgi.py  settings.py  urls.py  wsgi.py
gozle_portal/settings/: __init__.py  base.py  local.py  prod.py
