[tool.poetry]
name = "gozle-portal"
version = "0.0.0"
description = ""
authors = ["Rowsen <bayramovw0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.2.0"
django-redis = "^5.4.0"
redis = "^5.0.1"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
